[package]

name = "seax"
version = "0.0.2"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]
description = "SECD virtual machine for interpreting programs in FP languages and a Scheme compiler targeting that machine."
license = "MIT"
homepage = "http://hawkweisman.me/seax"
repository = "https://github.com/hawkw/seax"
readme = "README.md"
keywords = ["vm","lisp","languages"]

[dependencies]
docopt = "*"
regex = "*"
rustc-serialize = "*"

[dependencies.seax_svm]
path = "seax_svm"
version = "^0.2.2"

[dependencies.seax_scheme]
path = "seax_scheme"
version = "^0.1.0"