[package]

name = "seax"
version = "0.0.2"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]
description = "A virtual machine-based runtime environment for programming languages."
license = "MIT"
homepage = "http://hawkweisman.me/seax"
repository = "https://github.com/hawkw/seax"
readme = "README.md"
keywords = ["vm","lisp","languages"]

[dependencies]
# other Seax components
seax_svm = "^0.2.3"
seax_scheme = "^0.2.0"

# external dependencies
docopt = "*"
regex = "*"
rustc-serialize = "*"
log = "0.3.1"
