[package]

name = "seax_scheme"
version = "0.0.1"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]
description = "Scheme compiler for the Seax VM."
license = "MIT"
homepage = "http://hawkweisman.me/seax"
repository = "https://github.com/hawkw/seax"
readme = "../README.md"
keywords = ["vm","lisp","languages"]

[dependencies]
nom = "~0.1.0"