[package]

name = "seax_scheme"
version = "0.0.2"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]
description = "Scheme compiler for the Seax VM."
license = "MIT"
homepage = "http://hawkweisman.me/seax"
repository = "https://github.com/hawkw/seax"
readme = "../README.md"
keywords = ["vm","lisp","languages"]

[dependencies]
parser-combinators = "~0.2.5"

[dependencies.seax_svm]
path = "../seax_svm"
version = "~0.2.0"
