[package]

name = "seax_scheme"
version = "0.2.0"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]
description = "Scheme compiler for the Seax VM."
license = "MIT"
homepage = "http://hawkweisman.me/seax"
repository = "https://github.com/hawkw/seax"
readme = "../README.md"
keywords = ["vm","lisp","languages"]

[dependencies]
parser-combinators = "~0.2.6"
log = "0.3.1"

[dependencies.seax_svm]
path = "../seax_svm"
version = "^0.2.2"
