[package]

name = "seax_svm"
version = "0.2.5"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]
description = "SECD virtual machine for interpreting programs in FP languages"
license = "MIT"
homepage = "http://hawkweisman.me/seax"
repository = "https://github.com/hawkw/seax"
readme = "../README.md"
keywords = ["vm","lisp","languages"]

[dependencies]
log = "0.3.1"
byteorder = "*"

# QuickCheck property tests are disabled due to rust-lang/cargo/#860
# [dev-dependencies]
# quickcheck = "*"
